--- a/style/style.css
+++ b/style/style.css
@@ -86,8 +86,7 @@
    color: var(--white);
 }
 .title-span {
-   padding-left: 8px;
-   padding-right: 10px;
+   padding: 10px;
    font-size: 24px;
    display: inline;
    line-height: 3.5;
@@ -142,4 +141,104 @@
 .right {
    color: var(--black-2);
    background-color: var(--white);
+}
+/* bars display menu */
+.nav-menu {
+   display: none;
+   background-color: rgba(0, 0, 0, 0.5);
+   backdrop-filter: blur(10px);
+   border-radius: 10px;
+   color: var(--white);
+   padding: 20px;
+   position: absolute;
+   z-index: 1;
+}
+.inner-menu {
+   margin-top: 50px;
+   width: 100vw;
+   height: 100vh;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   text-align: center;
+   padding: 20px;
+   gap: 30%;
+}
+.inner-menu ul {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   padding-top: 40px;
+}
+.inner-menu ul li {
+   margin-left: 16px;
+   padding: 10px;
+   list-style: none;
+   font-size: 25px;
+   font-weight: bold;
+   text-align: left;
+   cursor: pointer;
+}
+
+.inner-menu ul li:first-child {
+   color: var(--sef_primary);
+}
+
+.right-menu {
+   display: flex;
+   flex-direction: column;
+   text-align: left;
+   gap: 30px;
+   height: 80%;
+}
+.account-credentials {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   padding: 3rem;
+   background-color: var(--black);
+   height: 100%;
+   width: 80%;
+   border-radius: 15px;
+}
+.header-credentials {
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+}
+.header-credentials p {
+   color: var(--grey);
+}
+
+.action-credentials {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 10px;
+}
+.account-btn {
+   width: 100%;
+   color: var(--black-2);
+   padding: 15px;
+   text-align: center;
+   font-weight: bold;
+}
+.log-in {
+   background-color: var(--sef_primary);
+}
+.sign-up {
+   background-color: var(--white);
+}
+.commercial-hr {
+   display: flex;
+   gap: 10px;
+   padding: 10px 20px 10px 20px;
+   background-color: var(--hrf_primary);
+   border-radius: 15px;
+   width: 80%;
+}
+
+.commercial-details {
+   flex-direction: column;
+   justify-content: space-around;
 }
