--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,6 @@
    width: 100%;
    height: 100%;
    display: flex;
-   position: relative;
    align-items: center;
 }
 .hero-left {
@@ -45,17 +44,11 @@
 }
 
 .color-overlay {
-   position: absolute;
-   top: 0;
-   left: 0;
    width: 100%;
    height: 100%;
    background: var(--overlay-green);
 }
 .color-overlay-right {
-   position: absolute;
-   top: 0;
-   left: 0;
    width: 100%;
    height: 100%;
    background: rgba(35, 35, 35, 0.8);
@@ -102,7 +95,7 @@
 .hero-left-desc {
    color: var(--white);
    text-align: right;
-   font-size: 18px;
+   font-size: 15px;
    margin-top: 40px;
    margin-bottom: 40px;
    line-height: 1.5;
@@ -117,7 +110,7 @@
 }
 .hero-right-desc {
    color: white;
-   font-size: 18px;
+   font-size: 15px;
    line-height: 1.5;
    padding-top: 40px;
    padding-bottom: 40px;
@@ -149,7 +142,6 @@
    backdrop-filter: blur(10px);
    border-radius: 10px;
    color: var(--white);
-   padding: 20px;
    position: absolute;
    z-index: 1;
 }
@@ -185,6 +177,7 @@
 }
 
 .right-menu {
+   margin-top: 5rem;
    display: flex;
    flex-direction: column;
    text-align: left;
@@ -241,4 +234,10 @@
 .commercial-details {
    flex-direction: column;
    justify-content: space-around;
+}
+.commercial-details h1 {
+   font-size: 1rem;
+}
+.commercial-details p {
+   font-size: 0.6rem;
 }
