--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,6 @@
    display: flex;
    height: 100vh;
    width: 100vw;
-   position: relative;
 }
 .hero-section {
    background-size: cover;
@@ -30,6 +29,8 @@
    width: 100%;
    height: 100%;
    display: flex;
+   flex-wrap: wrap;
+   flex-shrink: 1;
    align-items: center;
 }
 .hero-left {
@@ -140,10 +141,14 @@
    display: none;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(10px);
-   border-radius: 10px;
    color: var(--white);
-   position: absolute;
-   z-index: 1;
+   position: fixed;
+   z-index: 4;
+   overflow: scroll;
+   top: 0%;
+   bottom: 0%;
+   left: 0%;
+   right: 0%;
 }
 .inner-menu {
    margin-top: 50px;
@@ -159,8 +164,9 @@
 .inner-menu ul {
    display: flex;
    flex-direction: column;
-   gap: 10px;
+   gap: 5px;
    padding-top: 40px;
+   margin-left: 54px;
 }
 .inner-menu ul li {
    margin-left: 16px;
@@ -264,12 +270,12 @@
 
 /* video section */
 .se-video {
+   margin-top: 0;
+
    width: 100%;
    max-width: 800px;
-   height: 80%;
-   display: flex;
-   flex-direction: column;
-   justify-content: flex-start;
+   height: 100%;
+   display: block;
 }
 
 .se-video iframe {
@@ -353,16 +359,16 @@
    gap: 20px;
 }
 .grads {
-   flex-basis: 403px;
+   flex-basis: 350px;
    background-color: var(--background);
-   padding: 40px;
+   padding: 34px;
    line-height: 1.5;
 }
 
 .recruitment-global {
    background-color: var(--background);
-   padding: 20px 0px 20px 20px;
-   line-height: 1.8;
+   padding: 40px;
+   line-height: 1.2;
 }
 
 /* programs section */
