--- a/style/utilities.css
+++ b/style/utilities.css
@@ -77,3 +77,22 @@ nav i {
 .circles .circle-div:nth-child(3) {
    background-color: var(--sef_primary);
 }
+.circles-p {
+   display: flex;
+   gap: 10px;
+   align-items: center;
+}
+.circle-div-p {
+   height: 10px;
+   padding: 10px;
+   border-radius: 50%;
+}
+.circles-p .circle-div-p:nth-child(1) {
+   background-color: var(--light_grey);
+}
+.circles-p .circle-div-p:nth-child(2) {
+   background-color: var(--grey);
+}
+.circles-p .circle-div-p:nth-child(3) {
+   background-color: var(--black-2);
+}
