--- a/style/style.css
+++ b/style/style.css
@@ -662,3 +662,22 @@
    display: flex;
    justify-content: space-around;
 }
+
+/* partners section */
+
+.partner-container {
+   width: 80%;
+   display: flex;
+   flex-direction: column;
+}
+
+.row-partners {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 10%;
+}
+
+.row-partners img {
+   width: 120px;
+}
