--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
   .hero-parent {
     flex-direction: column;
     height: 100%;
@@ -7,7 +7,7 @@
     position: inherit;
   }
   .inner-menu {
-    margin-top: 50px;
+    margin-top: 200px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -67,15 +67,26 @@
   }
   .se-video {
     width: 87%;
-    height: 48%;
+    height: 245px;
   }
 
   .grey-section {
     height: 100%;
   }
-  .milestones-data {
-    flex-direction: column;
+  .milestones-section {
+    align-items: flex-start;
   }
+  .milestones-data {
+    height: 100%;
+    flex-direction: column;
+    padding: 12px;
+    width: 90%;
+  }
+  .milestone-left {
+    height: 458px;
+    width: 450px;
+  }
+
   .green-arrow {
     font-size: 20px;
   }
@@ -85,9 +96,15 @@
   /* tab section  */
   .tabs-section {
     width: fit-content;
+    height: 100%;
   }
   .tabs {
+    align-items: center;
     width: fit-content;
+  }
+  .tabs-list {
+    align-self: flex-start;
+    margin-left: 24px;
   }
   .tab-desc {
     width: fit-content;
@@ -96,9 +113,54 @@
   .inner-container {
     flex-direction: column;
     align-items: center;
+    padding: 0px;
+    height: 600px;
   }
   .start-section {
-    width: -webkit-fill-available;
+    align-items: center;
+    width: 100%;
+  }
+  [data-tab-content] {
+    width: 90%;
+    align-items: center;
+    height: 90%;
+  }
+
+  .inner-tab-right {
+    height: 100px;
+    flex-grow: 2;
+  }
+  .inner-tab-right img {
+    height: 200px;
+  }
+  .hire-container {
+    padding: 0;
+    height: auto;
+  }
+  .contact-us-container {
+    flex-direction: column-reverse;
+    width: 90%;
+  }
+  .row {
+    gap: 0;
+  }
+  .inner-testimonial-slide {
+    flex-direction: column;
+  }
+  .row-partners {
+    flex-wrap: wrap;
+  }
+
+  .partners-section {
     margin-bottom: 20px;
+    height: 100%;
+  }
+  .news-letter {
+    flex-direction: column;
+    height: 14rem;
+    padding-bottom: 10px;
+  }
+  .links-section {
+    flex-direction: column;
   }
 }
