--- a/style/style.css
+++ b/style/style.css
@@ -253,7 +253,7 @@
   flex-direction: column;
   align-items: center;
   background-color: var(--white);
-  height: 100vh;
+  height: auto;
 }
 .inner-section {
   width: 80%;
@@ -274,7 +274,7 @@
 
   width: 100%;
   max-width: 800px;
-  height: 100%;
+  height: 500px;
   display: block;
 }
 
@@ -290,14 +290,16 @@
   height: 100%;
 }
 .milestones-data {
+  height: 372px;
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  width: 80%;
 }
 .inner-milestone {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   gap: 20px;
 
@@ -309,7 +311,12 @@
   justify-content: center;
   background-color: var(--background);
   gap: 20px;
-  padding: 40px;
+  padding: 6%;
+}
+.milestone-left {
+  width: 500px;
+}
+.milestone-right {
 }
 
 .percentage {
@@ -342,13 +349,14 @@
 .trained {
   flex-basis: 320px;
   background-color: var(--background);
-  padding: 40px;
+  padding: 20px;
   line-height: 1.5;
 }
 .hiring-companies {
   background-color: var(--background);
-  padding: 28px;
+  padding: 20px;
   line-height: 1.8;
+  height: 190px;
 }
 
 .lower-right-milestone {
@@ -361,14 +369,15 @@
 .grads {
   flex-basis: 350px;
   background-color: var(--background);
-  padding: 34px;
+  padding: 20px;
   line-height: 1.5;
 }
 
 .recruitment-global {
   background-color: var(--background);
-  padding: 40px;
+  padding: 20px;
   line-height: 1.2;
+  height: 163px;
 }
 
 /* programs section */
@@ -398,6 +407,7 @@
   flex-direction: column;
   flex: content;
   width: 80%;
+  margin-bottom: 20px;
 }
 .tabs-list {
   display: flex;
@@ -405,11 +415,12 @@
   width: 80%;
   gap: 20px;
   padding: 0;
+  margin: 0;
 }
 
 .tabs-list li {
   list-style: none;
-  color: white;
+  color: var(--black);
 }
 .tab {
   padding: 10px;
@@ -420,6 +431,7 @@
 }
 .tab.active {
   background-color: var(--black);
+  color: var(--sef_primary);
 }
 
 #fcs-content {
@@ -431,6 +443,7 @@
 
   background-color: var(--black);
 }
+
 #fsw-content {
   color: white;
   border-radius: 10px;
@@ -453,9 +466,13 @@
   align-items: start;
   gap: 20px;
   max-width: fit-content;
-  padding: 30px;
+  padding: 10px;
 }
 
+.inner-tab-right img {
+  width: 300px;
+  height: 300px;
+}
 .inner-container {
   display: flex;
   padding: 3rem;
@@ -474,6 +491,9 @@
   background-color: var(--black-2);
   padding: 10px;
 }
+.tab-span {
+  color: var(--sef_primary);
+}
 /* hire section */
 .hire-section {
   background-color: var(--black);
@@ -482,10 +502,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 100px;
-  height: 100%;
+  height: 80%;
   color: var(--background);
-
+  width: 80%;
   gap: 20px;
 }
 .hire-title {
@@ -524,9 +543,11 @@
   align-items: center;
   width: 100%;
   justify-content: flex-end;
-  padding: 10px;
+  padding: 5px;
   background-color: var(--black-2);
   border-radius: 20px;
+  margin-bottom: 20px;
+  gap: 10px;
 }
 .img-hr img {
   width: 120px;
@@ -612,7 +633,6 @@
   margin-bottom: 10px;
   color: var(--white);
   border-radius: 10px;
-  overflow: hidden;
   background-color: var(--black-2);
   cursor: pointer;
 }
@@ -650,7 +670,7 @@
 
 .contact-us {
   background-color: var(--sef_primary);
-  height: 70vh;
+  height: 9 0vh;
 }
 
 .contact-us-container {
@@ -658,6 +678,8 @@
   justify-content: center;
   gap: 20px;
   height: fit-content;
+  margin-bottom: 20px;
+  width: 80%;
 }
 
 .directions {
@@ -749,6 +771,7 @@
 .submit-newsletter {
   color: var(--white);
   background-color: var(--black-2);
+  padding: 10px;
 }
 
 /* footer section */
@@ -759,7 +782,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 40vh;
+  height: 100%;
+  width: auto;
 }
 
 .links-section {
