--- a/style/style.css
+++ b/style/style.css
@@ -97,8 +97,8 @@
   color: var(--white);
   text-align: right;
   font-size: 0.8rem;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 55px;
+  margin-bottom: 50px;
   line-height: 1.5;
 }
 .hero-text-title {
@@ -138,7 +138,7 @@
 }
 /* bars display menu */
 .nav-menu {
-  display: none;
+  display: block;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
   color: var(--white);
