responsive on 900px

--- a/style/style.css
+++ b/style/style.css
@@ -138,7 +138,7 @@
 }
 /* bars display menu */
 .nav-menu {
-  display: block;
+  display: none;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
   color: var(--white);
@@ -476,6 +476,7 @@
 .inner-container {
   display: flex;
   padding: 3rem;
+  gap: 60px;
 }
 .tab-bottom {
   display: flex;
@@ -490,6 +491,8 @@
 .learn {
   background-color: var(--black-2);
   padding: 10px;
+  width: 45%;
+  text-align: right;
 }
 .tab-span {
   color: var(--sef_primary);
@@ -522,9 +525,9 @@
   border-radius: 20px;
 }
 .hire-section-span {
-  width: 80%;
+  width: 63%;
   background-color: var(--black);
-
+  padding: 25px 10px;
   margin: 15px;
 }
 
@@ -543,15 +546,16 @@
   align-items: center;
   width: 100%;
   justify-content: flex-end;
-  padding: 5px;
+  padding: 5px 30px;
   background-color: var(--black-2);
   border-radius: 20px;
   margin-bottom: 20px;
-  gap: 10px;
+  gap: 20px;
 }
 .img-hr img {
-  width: 120px;
+  width: 160px;
   height: 70px;
+  padding: 0 10px;
 }
 /* testimonials section */
 .testimonial-container {
@@ -758,10 +762,12 @@
 .subscribe-text {
   display: flex;
   flex-direction: column;
-  gap: 20px;
   color: var(--white);
   margin: 0 auto;
   width: 50%;
+}
+.subscribe-text h1 {
+  margin: 0;
 }
 
 .email-section {
@@ -803,8 +809,12 @@
 .links-left li,
 .links-right li {
   list-style: none;
+  color: var(--grey);
+  margin: 20px;
 }
-
+.links-left li:first-child {
+  color: var(--white);
+}
 .links-right {
   align-self: flex-end;
 }
@@ -813,8 +823,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 190px;
+  align-items: flex-end;
+}
+.social-links-buttons i {
+  font-size: 2rem;
+  color: var(--grey);
 }
 .copolicy {
   display: flex;
   justify-content: space-around;
+  color: var(--grey);
+}
+.green-color {
+  color: var(--sef_primary);
 }
