--- a/style/mobile.css
+++ b/style/mobile.css
@@ -104,17 +104,19 @@
   }
   .tabs-list {
     align-self: flex-start;
-    margin-left: 24px;
+    margin-left: 25px;
   }
   .tab-desc {
     width: fit-content;
-    font-size: 10px;
+    font-size: 16px;
   }
   .inner-container {
     flex-direction: column;
     align-items: center;
     padding: 0px;
-    height: 600px;
+    height: 690px;
+    gap: 0px;
+    margin: 0 42px;
   }
   .start-section {
     align-items: center;
@@ -131,7 +133,8 @@
     flex-grow: 2;
   }
   .inner-tab-right img {
-    height: 200px;
+    width: 340px;
+    height: 255px;
   }
   .hire-container {
     padding: 0;
@@ -159,8 +162,56 @@
     flex-direction: column;
     height: 14rem;
     padding-bottom: 10px;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+  }
+  .subscribe-text {
+    margin: 0;
+    padding-top: 30px;
+    width: 95%;
+    font-size: 12px;
+    margin-left: 30px;
+  }
+  .subscribe-text p {
+    color: var(--grey);
+  }
+
+  .email-section {
+    margin-left: 30px;
+  }
+  .email-section input {
+    width: 300px;
   }
   .links-section {
     flex-direction: column;
+    gap: 30px;
+  }
+  .links-left ul,
+  .links-right ul {
+    padding: 0px;
+  }
+  .social-links {
+    align-items: center;
+  }
+  .page-links {
+    justify-content: flex-start;
+    width: 100%;
+    padding-left: 20px;
+    gap: 80px;
+  }
+  .copolicy {
+    flex-direction: column-reverse;
+    align-items: center;
+    padding: 65px 0px 50px 0px;
+    margin-top: 2px;
+    color: var(--grey);
+  }
+  .tab-bottom {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .learn {
+    width: 100%;
   }
 }
