--- a/style/mobile.css
+++ b/style/mobile.css
@@ -34,9 +34,10 @@
   }
   .nav-menu {
     background-color: rgba(0, 0, 0, 0.9);
+    overflow-y: scroll;
   }
   .inner-menu ul {
-    margin-top: 50px;
+    margin-top: 150px;
     padding: 15px 20px;
     margin-left: 0px;
   }
