--- a/style/style.css
+++ b/style/style.css
@@ -144,12 +144,31 @@
   color: var(--white);
   position: fixed;
   z-index: 4;
-  overflow: scroll;
+  overflow: hidden;
   top: 0%;
   bottom: 0%;
   left: 0%;
   right: 0%;
 }
+
+.inner-menu-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  z-index: 5;
+  left: 10%;
+  top: 9%;
+  min-width: 80%;
+}
+.inner-menu-nav i {
+  color: var(--white);
+  font-size: 40px;
+  padding: 10px;
+  background-color: var(--black);
+  border-radius: 10px;
+}
+
 .inner-menu {
   margin-top: 50px;
   width: 100vw;
@@ -183,7 +202,6 @@
 }
 
 .right-menu {
-  margin-top: 5rem;
   display: flex;
   flex-direction: column;
   text-align: left;
