--- a/style/utilities.css
+++ b/style/utilities.css
@@ -39,19 +39,19 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: absolute;
-  z-index: 5;
+  z-index: 2;
   left: 10%;
   top: 10%;
   min-width: 80%;
 }
-nav i {
+
+.openMenu {
   color: var(--white);
   font-size: 40px;
   padding: 10px;
   background-color: var(--black);
   border-radius: 10px;
 }
-
 .green-arrow {
   color: var(--sef_primary);
   font-weight: bolder;
